--- a/gateway-app/src/main/resources/web/gateway/appInst.html
+++ b/gateway-app/src/main/resources/web/gateway/appInst.html
@@ -67,6 +67,7 @@
                    placeholder="Enter weight">
           </div>
 
+          <!-- TODO: close form on update -->
           <button type="submit" class="btn btn-primary" ng-disabled="form.$invalid ">Update</button>
         </form>
       </div>
@@ -78,6 +79,7 @@
 </div>
 
 <!-- Tabs for showing status -->
+<!-- TODO: remove tabs or fill in data -->
 <div >
   <h3>Status: <span class="text-success" ng-show="rawStatusForOneInst">HAproxy is running
             <span class="glyphicon glyphicon-thumbs-up"></span></span>
