--- a/gateway-app/src/main/resources/web/gateway/lbform.html
+++ b/gateway-app/src/main/resources/web/gateway/lbform.html
@@ -109,6 +109,7 @@
                placeholder="Enter username">
     </div>
 
+  <!-- TODO: close form on update/creation -->
     <button type="submit" class="btn btn-primary" ng-hide="lb.id"  ng-disabled="lbform.$invalid ">Create</button>
     <button type="submit" class="btn btn-primary" ng-show="lb.id">Update</button>
 </form>
